# QuickShot

./: .gitignore  CMakeLists.txt  Capture.cpp  Capture.h  Demo.cpp  README.md  Scale.cpp  Scale.h  TODO  TypesAndDefs.cpp  TypesAndDefs.h  bench.cpp  run.py
